# huffman

./: .travis.yml  CMakeLists.txt
test/: tests.cpp
util/: main.cpp
